RealtimeAnalyserNode does not consistently respect .minDecibels https://bugs.webkit.org/show_bug.cgi?id=78729

Make use of m_minDecibel consistent.  Clean up some style issues
with names of local variables and style issues with float
constants.

Patch by Raymond Toy <rtoy@google.com> on 2012-02-17
Reviewed by Chris Rogers.

No new tests because the changes are cosmetic for style issues.

* webaudio/RealtimeAnalyser.cpp:
(WebCore):
(WebCore::RealtimeAnalyser::doFFTAnalysis):
(WebCore::RealtimeAnalyser::getFloatFrequencyData):
(WebCore::RealtimeAnalyser::getByteFrequencyData):
(WebCore::RealtimeAnalyser::getByteTimeDomainData):

Canonical link: https://commits.webkit.org/95942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108110 268f45cc-cd09-0410-ab3c-d52691b4dbfc